简单轮播图的实现

--- a/Wheel/throttling.html
+++ b/Wheel/throttling.html
@@ -30,7 +30,7 @@
         }
 
         function real() {
-            console.log('防抖啦');
+            console.log('节流啦');
         }
     </script>
 </body>
