--- a/test.html
+++ b/test.html
@@ -1,21 +1,33 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset=utf-8>
-    </head>
-    <body>
-    	<ul>
-            <li>.</li>
-            <li>.</li>
-            <li>.</li>
-        </ul>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>节流</title>
+</head>
+<body>
+    <button id="btn">
+        提交
+    </button>
 
-        <script type="text/javascript">
-            // 补全代码
-            const ul = document.querySelector('ul')
-            ul.onclick = (e) => {
-                e.target.innerText += '.'
-            }
-        </script>
-    </body>
+    <script>
+        let btn = document.getElementById('btn')
+        btn.addEventListener('click', trigger(real, 2000))
+        function trigger(fnc, dalay) {
+          let timer
+          return function() {
+            if(timer) return
+            timer = setTimeout(() => {
+              fnc()
+              timer = null
+            }, dalay)
+          }
+        }
+
+        function real() {
+            console.log('节流啦');
+        }
+    </script>
+</body>
 </html>
