--- a/flex.html
+++ b/flex.html
@@ -6,17 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>flex布局测试</title>
   <style>
+    /* flex-flow  */
     .box {
       width: 800px;
       height: 600px;
       background-color: darkgray;
       display: flex;
-      /* flex-direction: row;
-      flex-wrap: wrap; */
-      flex-flow: row wrap;
-      /* 在主轴上的排列方式 */
-      justify-content: center;
-      align-items: center;
+      flex-direction: column;
+      justify-content: space-between;
     }
 
     .inner {
@@ -27,21 +24,9 @@
 
     .inner1 {
       width: 100px;
-      height: 200px;
-      background-color: red;
-    }
-
-    .inner2 {
-      width: 100px;
-      height: 300px;
-      background-color: red;
-      order: 1
-    }
-
-    .inner3 {
-      width: 100px;
-      height: 400px;
-      background-color: red;
+      height: 100px;
+      background-color: yellow;
+      align-self: flex-end;
     }
     
   </style>
@@ -50,8 +35,6 @@
   <div class="box">
     <div class="inner"></div>
     <div class="inner1"></div>
-    <div class="inner2"></div>
-    <div class="inner3"></div>
   </div>
 </body>
 </html>
