--- a/test.html
+++ b/test.html
@@ -5,18 +5,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <style>
-    #content .text {text-color:red;}
-    #content>.title {color:green;}
-    #content div.title {font-color:blue;}
-    strong {font-color:yellow;}
-    * {color:black;}
-  </style>
 </head>
 <body>
-  
-  <div id="content">
-  <span class="text"><strong class="title">Hello, world.</strong></span>
+  <div>
+    <input type="text">
   </div>
 </body>
 </html>
