--- a/test.html
+++ b/test.html
@@ -5,10 +5,16 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <style>
+    .container {
+      width: 10px;
+      height: 500px;
+    }
+  </style>
 </head>
 <body>
-  <div>
-    <input type="text">
+  <div class="container">
+    2132133333333333333333
   </div>
 </body>
 </html>
