--- a/test.html
+++ b/test.html
@@ -1,20 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <style>
-    .container {
-      width: 10px;
-      height: 500px;
-    }
-  </style>
-</head>
-<body>
-  <div class="container">
-    2132133333333333333333
-  </div>
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>阴影</title>
+	</head>
+	<style>
+		.box {
+			width: 1300px;
+			height: 700px;
+			border: 1px solid #000;
+			display: flex;
+			justify-content: space-around;
+			.child {
+				width: 150px;
+				height: 150px;
+				background-color: #f00;
+			}
+			.big-child {
+				width: 300px;
+				height: 300px;
+				background-color: #f00;
+			}
+		}
+	</style>
+	<body>
+		<div class="box">
+			<div class="child"></div>
+			<div class="big-child"></div>
+			<div class="child"></div>
+			<div class="child"></div>
+		</div>
+	</body>
 </html>
